src/test/ui/error-codes/E0558.stderr
error[E0558]: export_name attribute has invalid format
  --> $DIR/E0558.rs:11:1
   |
11 | #[export_name]
   | ^^^^^^^^^^^^^^ did you mean #[export_name="*"]?

error: aborting due to previous error

